# skymp

./: .clang-format  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitignore  .gitmodules  .linelint.yml  .mergify.yml  .prettierignore  .prettierrc  .prettierrc.json  .prettierrc.yml  .rgignore  .skymp-dev-dashboard.json  .skymp-dev.yaml  ActionListener.cpp  ActionListener.h  AnimationData.cpp  Appearance.h  BUILD.txt  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  ConsoleCommands.cpp  DEP_LICENSES  Dockerfile  DummyWorldObject.h  Equipment.cpp  FindRecipe.h  FormCallbacks.h  FormDesc.h  GetBaseActorValues.h  HeuristicPolicy.cpp  JsEngine.h  LICENSE  MpActor.cpp  MpActor.h  MpChangeForms.h  (+71 more)
1js/: CMakeLists.txt  FunctionT.h  JsEngine.cpp  JsEngine.h  JsExternalObjectBase.h  JsFunctionArguments.h  JsType.h  JsValue.cpp  JsValue.h
1js/private/: JsFunctionArgumentsImpl.cpp  JsFunctionArgumentsImpl.h
aaa-playground/: CMakeLists.txt  cmakeproj.cmake
aaa-playground/src/: main.cpp
antigo/: CMakeLists.txt  cmakeproj.cmake
antigo/src_stub/: antigo_stub.cpp
antigo/unit/: CMakeLists.txt
libespm/: CMakeLists.txt  LICENSE  cmakeproj.cmake
libespm/src/: ACHR.cpp  ACTI.cpp  ALCH.cpp  AMMO.cpp  ARMO.cpp  AllocatedBuffer.cpp  BOOK.cpp  Browser.cpp  BrowserInfo.cpp  CELL.cpp  COBJ.cpp  CONT.cpp  CTDA.cpp  CombineBrowser.cpp  Combiner.cpp  CompressedFieldsCache.cpp  ENCH.cpp  Effects.cpp  EspmUtils.cpp  FACT.cpp  FLOR.cpp  FLST.cpp  GMST.cpp  GroupHeader.cpp  INGR.cpp  IterateFields.cpp  KYWD.cpp  LIGH.cpp  LVLI.cpp  LeveledListBase.cpp  Loader.cpp  LookupResult.cpp  MGEF.cpp  MISC.cpp  MappedBuffer.cpp  NAVM.cpp  NPC_.cpp  NavMeshKey.cpp  OTFT.cpp  Property.cpp  (+18 more)
overlay_ports/cef-prebuilt/: CMakeLists.txt  portfile.cmake  vcpkg.json
overlay_ports/commonlibsse/: CMakeLists.txt  portfile.cmake  vcpkg.json  version-add_1.6.342_support.patch
overlay_ports/commonlibvr/: CMakeLists.txt  default-vr-on.patch  extradatalist-make_members_public.patch  objectrefr-make_moverefr_public.patch  portfile.cmake  stackframe-uncomment-top-args.patch  variable-make_members_public.patch  vcpkg.json
overlay_ports/skse64/: CMakeLists.txt  portfile.cmake  vcpkg.json
overlay_ports/sksevr/: CMakeLists.txt  portfile.cmake  vcpkg.json
papyrus-vm/: CMakeLists.txt  LICENSE  cmakeproj.cmake
papyrus-vm/src/: ActivePexInstance.cpp  OpcodesImplementation.cpp  Reader.cpp  Utils.cpp  VarValue.cpp  VirtualMachine.cpp
savefile/: CMakeLists.txt  cmakeproj.cmake
savefile/src/: SFChangeFormACHR.cpp  SFChangeFormACHR.h  SFChangeFormNPC.cpp  SFChangeFormNPC.h  SFMain.cpp  SFReader.cpp  SFSeekerOfDifferences.cpp  SFSeekerOfDifferences.h  SFStructure.cpp  SFStructure.h  SFWriter.cpp
scamp_native/: CMakeLists.txt
scamp_native/addon/: main.cc
scamp_native/client/: main.cpp
scamp_native/geo/: GeoFace.cpp  GeoFace.h  GeoPlane.cpp  GeoPlane.h  GeoPoint.cpp  GeoPoint.h  GeoPolygon.cpp  GeoPolygon.h  GeoPolygonProc.cpp  GeoPolygonProc.h  GeoVector.cpp  GeoVector.h  Utility.cpp  Utility.h
scamp_native/lib_espm/: CMakeLists.txt  Combiner.cpp  Combiner.h  Loader.h  espm.cpp  espm.h
scamp_native/mp_common/: Exceptions.h  IMessage.h  IdManager.cpp  IdManager.h  JsonUtils.cpp  JsonUtils.h  MpClientPlugin.cpp  MpClientPlugin.h  MsgType.h  Networking.cpp  Networking.h  NetworkingCombined.cpp  NetworkingCombined.h  NetworkingInterface.h  NetworkingMock.cpp  NetworkingMock.h  RakNet.h  Structures.h
scamp_native/papyrus_test_files/: AAATestObject.psc  LatentTest.psc  NirnrootACTIVATORScript.psc  OpcodesTest.psc  form.pex
scamp_native/papyrus_vm_lib/: ActivePexInstance.cpp  IGameObject.cpp  OpcodesImplementation.cpp  OpcodesImplementation.h  Promise.h  Reader.cpp  Reader.h  Structures.h  Utils.h  VarValue.cpp  VirtualMachine.cpp  VirtualMachine.h
scamp_native/papyrus_vm_main/: main.cpp  tests.h
scamp_native/server_guest_lib/: ActionListener.cpp  ActionListener.h  AsyncSaveStorage.cpp  AsyncSaveStorage.h  ChangeFormGuard.cpp  ChangeFormGuard.h  ConsoleCommands.cpp  ConsoleCommands.h  DSLine.h  DynamicFields.cpp  Equipment.cpp  EspmGameObject.cpp  EspmGameObject.h  FileDatabase.cpp  FileDatabase.h  FindRecipe.cpp  FormDesc.cpp  FormDesc.h  GamemodeApi.h  Grid.h  GridElement.h  HeuristicPolicy.cpp  HeuristicPolicy.h  IActionListener.h  IMessageOutput.h  IPapyrusCompatibilityPolicy.h  ISaveStorage.h  IWorldObject.h  Inventory.cpp  Inventory.h  LeveledListUtils.cpp  LeveledListUtils.h  Look.cpp  MigrationDatabase.cpp  MigrationDatabase.h  MongoDatabase.cpp  MongoDatabase.h  MongoSaveStorage.cpp  MongoSaveStorage.h  MovementValidation.cpp  (+53 more)
scamp_native/unit/: ActorTest.cpp  Benchmarks.cpp  Benchmarks.h  ConsoleCommandTest.cpp  CraftTest.h  EspmTest.cpp  EspmTest.h  FormDescTest.cpp  GridTest.cpp  NpcExists.h  (+48 more)
serialization/: CMakeLists.txt  cmakeproj.cmake
skymp5-downloader/: CMakeLists.txt
skymp5-server/: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README  build.bat  cmakeproj.cmake  dependencies.dockerfile  package-lock.json  package.json  server.dockerfile  tsconfig.json  wrapper.js  x64-linux-musl.cmake
skyrim-platform/: .npmignore  CMakeLists.txt  README.md  cmakeproj.cmake  package.json  vcpkg.json
unit/: ActivateParentTest.cpp  ActorTest.cpp  ActorsMapTest.cpp  AnimationSystemTest.cpp  ArchiveTest.cpp  ArchiveTestBinary.cpp  ArchiveTestSimdJson.cpp  Benchmarks.cpp  CMakeLists.txt  ChangeValuesTest.cpp  ConditionTest.cpp  ConsoleCommandTest.cpp  CraftTest.cpp  CropRegenerationTest.cpp  DamageFormulaTest.cpp  DistContentsExpected.json  DistContentsTest.cpp  DropItemTest.cpp  EspmTest.cpp  FileInfoTest.cpp  FormDescTest.cpp  GetBaseActorValuesTest.cpp  GridTest.cpp  Grid_MoveTest.cpp  HealthRestorationTest.cpp  HeuristicPolicyTest.cpp  HitTest.cpp  HttpClientApiTest.cpp  HttpClientApiTest.h  IdManagerTest.cpp  InventoryTest.cpp  LeveledListUtilsTest.cpp  LoadCellsTest.cpp  MigrationDatabaseTest.cpp  MiniDump.cpp  MiniDump.h  MongoDatabaseTest.cpp  MovementSerializationTest.cpp  MovementValidationTest.cpp  NetworkingTest.cpp  (+47 more)
viet/: CMakeLists.txt  LICENSE  cmakeproj.cmake
(+3466 files in other folders)
